# gptEmotion

./: .env.example  .gitignore  README.md  gptemotion.py  pyproject.toml
